portfolio_piece_Bayes_Terror

--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Terrorism Analyzed with Bayesian Inference</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/4_Baysesian_Terrorism.png" class="img-responsive img-centered" alt="">
+                            <p>This project focuses on using Bayesian inference to test the populations of terrorism. The dataset contained all terrorist attacks from 1970. After some exploratory analysis comparing the number of attacks across different regions, I decided to focus the regions with the least number of attacks. After analyzing the countries in those regions, I narrowed my focus on Japan and China the largest economic countries in the region. By using Bayesian inference with a Monty Carlo Markov Chain I was able to recreate the populations to test the statistical difference. This would let me know wether there is a difference in the number of attacks between the countries.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Project:
+                                    <strong><a href="https://github.com/c-mez04/data4mez/tree/master/Bayesian%20on%20Terrorism">Code</a>
                                     </strong>
                                 </li>
                                 <li>Date:
