port_piece_1_pic

--- a/index.html
+++ b/index.html
@@ -296,21 +296,13 @@
                         <div class="modal-body">
                             <h2>Terrorism Analyzed with Bayesian Inference</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/4_Baysesian_Terrorism.png" class="img-responsive img-centered" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/4_Bayesian_Terrorism.png" alt="">
                             <p>This project focuses on using Bayesian inference to test the populations of terrorism. The dataset contained all terrorist attacks from 1970. After some exploratory analysis comparing the number of attacks across different regions, I decided to focus the regions with the least number of attacks. After analyzing the countries in those regions, I narrowed my focus on Japan and China the largest economic countries in the region. By using Bayesian inference with a Monty Carlo Markov Chain I was able to recreate the populations to test the statistical difference. This would let me know wether there is a difference in the number of attacks between the countries.</p>
                             <ul class="list-inline item-details">
                                 <li>Project:
                                     <strong><a href="https://github.com/c-mez04/data4mez/tree/master/Bayesian%20on%20Terrorism">Code</a>
                                     </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+                                </li>    
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
