home_bayes_terror_pic

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
-                          <p>This is a summary of each project
+
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/4_Bayesian_Terrorism.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -302,7 +302,7 @@
                                 <li>Project:
                                     <strong><a href="https://github.com/c-mez04/data4mez/tree/master/Bayesian%20on%20Terrorism">Code</a>
                                     </strong>
-                                </li>    
+                                </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
