--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Liquor_zip_graph.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -121,7 +121,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/NVvsV.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -323,21 +323,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Data Analysis on Liquor Sales</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/Liquor_zip_graph.png" class="img-responsive img-centered" alt="">
+                            <p>The goal of this project was to find the best location to open a liquor store in the state of Iowa. The dataset contains sale transactions from the state distributor to local stores. Using number of bottles sold to each store as an indicator of demand. The location with the highest number of bottles sold will be the best locations to open a liquor store. Starting at the county level then zip code level we found the best locations to be those in zip codes 50314, 50317 and 50265. </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Project:
+                                    <strong><a href="https://github.com/c-mez04/data4mez/blob/master/Data_Analysis%20on%20Liqour%20Sales/Liquors.ipynb">Code</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -360,21 +352,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Bayesian Inference on Crime</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/NVvsV.png" class="img-responsive img-centered" alt="">
+                            <p>This project used bayesian inference along with Monty Carlo Markov Chains to test the effectiveness of the broken windows policing policy. The original dataset from the US Census Bureau contains crime rates by county. By separating the time period before and after the implementation of the policy we can recreate the populations they derived and compare the two populations. Using the difference of means we can see that there was not a drastic difference in the populations. Although the policy did have an effect it wasn't the major contributor to the fall in crime rates in NYC.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Project:
+                                    <strong><a href="https://github.com/c-mez04/data4mez/blob/master/bayesian_crime/analyzing%20broken%20glass.ipynb">Code</a>
                                     </strong>
                                 </li>
                             </ul>
