finished port draft1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top"> Data Science </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/2017-January-GA-Headshots-0004.jpg" alt="">
                     <div class="intro-text">
-                        <span class="name">Carlton Mezetin - Data Scientist</span>
+                        <span class="name">Carlton Mezetin</span>
                         <hr class="star-light">
-                        <span class="skills">A passionate problem-solver who uses methodical approaches to extract meaningful results, which enable informed decisions, and fosters collaboration to create solutions not just for today, but for tomorrow’s possibilities.
+                        <span class="skills">A passionate problem - solver who uses methodical approaches to extract meaningful results, which enable informed decisions, and fosters collaboration to create solutions not just for today, but for tomorrow’s possibilities.
                         </span>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/age_dist_SQL.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -141,7 +141,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Models.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -163,20 +163,48 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Resume</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>
+Skills
+•	Python(Pandas, Sklearn, NumPy)	•	Predictive Modeling(Classification, Regression)
+•	Data Visualizations (Tableau, Matplotlib, Seaborn)
+•	Statistical Analysis	•	SQL 	•	Git & Github
+•	Microsoft Excel	•	Data Cleaning	•	Data Mining
+Experience
+General Assembly Data Science Immersive	November 2016 – February 2017
+Immersive Student
+General Assembly’s Immersive focuses on the utilization of technical and analytical skills for Data Science. Labs and Projects displayed market demanded skills.
+•	SQL Lab- Created a relational database and using SQL queries to perform descriptive analysis on the customer demographic, products sales and inventory numbers of a company.
+•	Model Evaluation Lab- Explored different predictive models (Logistic Regression, Random Forests, Support Vector Machines, etc.) and ways of improving and testing model performance.
+•	Global Terrorism Database- This project relied on Bayesian inference in Monty Carlo Markov Chains to test regions with terrorism.  The project also relied on statistical analysis to predict terrorist attacks to impute missing data.
+•	Capstone- Analyzed NYC crime data and tested the validity of policing policy.
+PNC Bank	March 2016 – November 2016
+Personal Banker
+•	Banking- Opened accounts and performed maintenance for customers while cross-selling additional products. While leveraging the banks service to meet customer needs.
+•	Financial Knowledge -Recommended holistic financial advice to meet clients’ financial needs and risk tolerance.
+•	Customer Service-Provided immediate solutions to problems while maintaining customer-driven service.
+•	Cash transactions -Performed teller duties including processing deposits, payments and withdrawals, along with balancing responsibility.
+Washington Adventist University Accounting Department	March 2014 – September 2015
+ Accounts Payable Intern
+•	Accounts Payable- Processed accounts payable invoices.  Including checking vouchers for proper documentation, payment authorization and accurate due balances.
+•	Reviewed, verified and reconciled payment invoices and statements.
+•	Filed, maintained and organized invoices, checks and other valuable documents
+Education
+Washington Adventist University	December 2015
+BS Business Finance
+</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p></p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i>
                     </a>
                 </div>
             </div>
@@ -381,9 +409,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Data Analysis with SQL and Pandas</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/age_dist_SQL.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -418,21 +446,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Model Evaluation</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/models.png" class="img-responsive img-centered" alt="">
+                            <p>This piece was practicing model tuning and evaluation. The data set contained car information relating to chance of being purchased. Using several classification models and the use of Bagging and Grid Search to improve model performance.
+                            </p>Project
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>:
+                                    <strong><a href="https://github.com/c-mez04/data4mez/blob/master/Modeling%20and%20Tuning/Model_Evaluation.ipynb">Code</a>
                                     </strong>
                                 </li>
                             </ul>
