--- a/index.html
+++ b/index.html
@@ -163,41 +163,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Resume</h2>
+                    <h2>Skills</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>
-Skills
-•	Python(Pandas, Sklearn, NumPy)	•	Predictive Modeling(Classification, Regression)
-•	Data Visualizations (Tableau, Matplotlib, Seaborn)
-•	Statistical Analysis	•	SQL 	•	Git & Github
-•	Microsoft Excel	•	Data Cleaning	•	Data Mining
-Experience
-General Assembly Data Science Immersive	November 2016 – February 2017
-Immersive Student
-General Assembly’s Immersive focuses on the utilization of technical and analytical skills for Data Science. Labs and Projects displayed market demanded skills.
-•	SQL Lab- Created a relational database and using SQL queries to perform descriptive analysis on the customer demographic, products sales and inventory numbers of a company.
-•	Model Evaluation Lab- Explored different predictive models (Logistic Regression, Random Forests, Support Vector Machines, etc.) and ways of improving and testing model performance.
-•	Global Terrorism Database- This project relied on Bayesian inference in Monty Carlo Markov Chains to test regions with terrorism.  The project also relied on statistical analysis to predict terrorist attacks to impute missing data.
-•	Capstone- Analyzed NYC crime data and tested the validity of policing policy.
-PNC Bank	March 2016 – November 2016
-Personal Banker
-•	Banking- Opened accounts and performed maintenance for customers while cross-selling additional products. While leveraging the banks service to meet customer needs.
-•	Financial Knowledge -Recommended holistic financial advice to meet clients’ financial needs and risk tolerance.
-•	Customer Service-Provided immediate solutions to problems while maintaining customer-driven service.
-•	Cash transactions -Performed teller duties including processing deposits, payments and withdrawals, along with balancing responsibility.
-Washington Adventist University Accounting Department	March 2014 – September 2015
- Accounts Payable Intern
-•	Accounts Payable- Processed accounts payable invoices.  Including checking vouchers for proper documentation, payment authorization and accurate due balances.
-•	Reviewed, verified and reconciled payment invoices and statements.
-•	Filed, maintained and organized invoices, checks and other valuable documents
-Education
-Washington Adventist University	December 2015
-BS Business Finance
-</p>
+                                    Skills
+                      •	Python(Pandas, Sklearn, NumPy)
+                      •	Predictive Modeling(Classification, Regression)
+                      • Data Visualizations (Tableau, Matplotlib, Seaborn)
+                      •	Statistical Analysis	•	SQL 	•	Git & Github
+                      •	Microsoft Excel	•	Data Cleaning	•	Data Mining
+                    </p>
                 </div>
                 <div class="col-lg-4">
                     <p></p>
@@ -412,7 +391,7 @@ BS Business Finance
                             <h2>Data Analysis with SQL and Pandas</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/age_dist_SQL.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>With this project I created a database of tables containing customer information, billing information and payment information. Using SQL commands I manipulated the data to display the targeted information to later predict default status of customers.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
