--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Skills</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -141,23 +141,9 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/Models.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/models.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
@@ -169,14 +155,16 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>
-                                    Skills
-                      •	Python(Pandas, Sklearn, NumPy)
-                      •	Predictive Modeling(Classification, Regression)
-                      • Data Visualizations (Tableau, Matplotlib, Seaborn)
-                      •	Statistical Analysis	•	SQL 	•	Git & Github
-                      •	Microsoft Excel	•	Data Cleaning	•	Data Mining
-                    </p>
+                    <ul>
+                      <li>•	Python(Pandas, Sklearn, NumPy)</li>
+                      <li>•	Predictive Modeling(Classification, Regression)</li>
+                      <li>• Data Visualizations (Tableau, Matplotlib, Seaborn)</li>
+                      <li>•	Statistical Analysis</li>
+                      <li>•	SQL</li>
+                      <li>•	Git & Github</li>
+                      <li>•	Microsoft Excel</li>
+                      <li>•	Data Cleaning</li>
+                    </ul>
                 </div>
                 <div class="col-lg-4">
                     <p></p>
@@ -433,43 +421,6 @@
                             <ul class="list-inline item-details">
                                 <li>:
                                     <strong><a href="https://github.com/c-mez04/data4mez/blob/master/Modeling%20and%20Tuning/Model_Evaluation.ipynb">Code</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
