fixed additional bullets

--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <ul>
-                      <li>•	Python(Pandas, Sklearn, NumPy)</li>
-                      <li>•	Predictive Modeling(Classification, Regression)</li>
-                      <li>• Data Visualizations (Tableau, Matplotlib, Seaborn)</li>
-                      <li>•	Statistical Analysis</li>
-                      <li>•	SQL</li>
-                      <li>•	Git & Github</li>
-                      <li>•	Microsoft Excel</li>
-                      <li>•	Data Cleaning</li>
+                      <li>	Python(Pandas, Sklearn, NumPy)</li>
+                      <li>	Predictive Modeling(Classification, Regression)</li>
+                      <li> Data Visualizations (Tableau, Matplotlib, Seaborn)</li>
+                      <li>	Statistical Analysis</li>
+                      <li>	SQL</li>
+                      <li>	Git & Github</li>
+                      <li>	Microsoft Excel</li>
+                      <li>	Data Cleaning</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
