--- a/index.html
+++ b/index.html
@@ -239,16 +239,8 @@
                             <br>carltonmez@gmail.com</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>Linked In </h3>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="https://www.linkedin.com/in/carlton-mezetin-7768bbb5/">Profile</a>.</p>
                     </div>
                 </div>
             </div>
