--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                             <br>carltonmez@gmail.com</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Linked In </h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="https://www.linkedin.com/in/carlton-mezetin-7768bbb5/">Profile</a>.</p>
+                        <h3>Linkedin </h3>
+                        <p>You can find more on my Linkedin <a href="https://www.linkedin.com/in/carlton-mezetin-7768bbb5/">profile</a>.</p>
                     </div>
                 </div>
             </div>
