--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/NVvsV copy.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/NVvsV.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -313,21 +313,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Terrorism Analyzed with Bayesian Inference</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/4_Bayesian_Terrorism.png" class="img-responsive img-centered" alt="">
+                            <p>This project focuses on using Bayesian inference to test the populations of terrorism. The dataset contained all terrorist attacks from 1970. After some exploratory analysis comparing the number of attacks across different regions, I decided to focus the regions with the least number of attacks. After analyzing the countries in those regions, I narrowed my focus on Japan and China the largest economic countries in the region. By using Bayesian inference with a Monty Carlo Markov Chain I was able to recreate the populations to test the statistical difference. This would let me know wether there is a difference in the number of attacks between the countries.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Project
+                                    <strong><a href="https://github.com/c-mez04/data4mez/tree/master/Bayesian%20on%20Terrorism">Code</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -350,21 +342,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Data Analysis on Liquor Sales</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/Liquor_zip_graph.png" class="img-responsive img-centered" alt="">
+                            <p>The goal of this project was to find the best location to open a liquor store in the state of Iowa. The dataset contains sale transactions from the state distributor to local stores. Using number of bottles sold to each store as an indicator of demand. The location with the highest number of bottles sold will be the best locations to open a liquor store. Starting at the county level then zip code level we found the best locations to be those in zip codes 50314, 50317 and 50265. </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Project
+                                    <strong><a href="https://github.com/c-mez04/data4mez/blob/master/Data_Analysis%20on%20Liqour%20Sales/Liquors.ipynb">Code</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -387,21 +371,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Bayesian Inference on Crime</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/NVvsV.png" class="img-responsive img-centered" alt="">
+                            <p>This project used bayesian inference along with Monty Carlo Markov Chains to test the effectiveness of the broken windows policing policy. The original dataset from the US Census Bureau contains crime rates by county. By separating the time period before and after the implementation of the policy we can recreate the populations they derived and compare the two populations. Using the difference of means we can see that there was not a drastic difference in the populations. Although the policy did have an effect it wasn't the major contributor to the fall in crime rates in NYC.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Project
+                                    <strong><a href="https://github.com/c-mez04/data4mez/blob/master/bayesian_crime/analyzing%20broken%20glass.ipynb">Code</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -424,21 +400,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>PData Analysis with SQL and Pandas</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/age_dist_SQL.png" class="img-responsive img-centered" alt="">
+                            With this project I created a database of tables containing customer information, billing information and payment information. Using SQL commands I manipulated the data to display the targeted information to later predict default status of customers.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Project
+                                    <strong><a href="https://github.com/c-mez04/data4mez/blob/master/SQL/code%20challenge.ipynb">Code</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -461,52 +429,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
                             <h2>Model Evaluation</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/models.png" class="img-responsive img-centered" alt="">
-                            <p>This piece was practicing model tuning and evaluation. The data set contained car information relating to chance of being purchased. Using several classification models and the use of Bagging and Grid Search to improve model performance.</p>
+                            <p>This piece was practicing model tuning and evaluation. The data set contained car information relating to chance of being purchased. Using several classification models and the use of Bagging and Grid Search to improve model performance.
                             <ul class="list-inline item-details">
                                 <li>Project
                                     <strong><a href="https://github.com/c-mez04/data4mez/blob/master/Modeling%20and%20Tuning/Model_Evaluation.ipynb">Code</a>
                                     </strong>
-                                </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
