--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Carlton's Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,11 +71,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/2017-January-GA-Headshots-0004.jpg.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Carlton Mezetin</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Data Scientist</span>
+                        <p>A passionate problem-solver who uses methodical approaches to extract meaningful results, which enable informed decisions, and fosters collaboration to create solutions not just for today, but for tomorrow’s possibilities.</p>
                     </div>
                 </div>
             </div>
@@ -182,10 +183,6 @@
                     <li>	Data Cleaning </li>
                   </ul>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                    </a>
-                </div>
             </div>
         </div>
     </section>
@@ -252,32 +249,12 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>Washington DC
+                            <br>carltonmez@gmail.com</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>Linkedin</h3>
+                        <p><a href="https://www.linkedin.com/in/carlton-mezetin-7768bbb5/">Profile</a>.</p>
                     </div>
                 </div>
             </div>
@@ -400,7 +377,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>PData Analysis with SQL and Pandas</h2>
+                            <h2>Data Analysis with SQL and Pandas</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/age_dist_SQL.png" class="img-responsive img-centered" alt="">
                             With this project I created a database of tables containing customer information, billing information and payment information. Using SQL commands I manipulated the data to display the targeted information to later predict default status of customers.</p>
