--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/2017-January-GA-Headshots-0004.jpg.png" alt="">
+                    <img class="img-responsive" src="img/2017-January-GA-Headshots-0004.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">Carlton Mezetin</span>
                         <hr class="star-light">
